# boilerBOT

./: .gitignore  Cargo.toml  README.md  TEMPLATES.md  bot.py  config-example.toml  config-example.yaml
corecommands/: about.py  cogUtils.py  help.py
lib/: __init__.py  common.py  guildVarHelper.py  messageHandler.py
src/: commands.rs  config.rs  main.rs
src/commands/: mod.rs  ping.rs  test_command.rs
