[package]
name = "boiler-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_derive = "1.0.152"
serenity = { version = "0.11.5", features = ["voice"] }
tokio = { version = "1.23.0", features = ["signal", "rt-multi-thread"] }
toml = "0.5.10"
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.16"
